...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jumptech.ui.SignatureImageActivity">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
...
            android:layout_height="match_parent">

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/background_light"
                android:id="@+id/signature_pad" />

            <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
...
