...
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <EditText
                android:id="@+id/receivedByText"
                android:layout_width="wrap_content"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
...
                android:layout_below="@+id/receivedByCompanyNameLabel"
                android:ems="13"
                android:hint="@string/customerNameHint"
                android:maxLength="50" />

            <Button
                android:id="@+id/acceptRefuseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/receivedByText"
                android:layout_marginTop="10dp"
...
