...
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary" />

                <TextView
                    android:id="@+id/environment"
...
                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                        android:id="@+id/swipeRefreshLayoutRoute"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ListView
                            android:id="@android:id/list"
                            style="@style/generalList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />
                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
                </RelativeLayout>
...
