...
                android:textColor="@color/stop_windowDisplay_normal_text_color"
                android:visibility="gone"
                tools:text="Window" />
        </LinearLayout>

        <TextView
            android:id="@+id/stopName"
            style="@style/companyName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:text="Stop name" />

        <TextView
...
                    android:id="@+id/mapButton"
                    android:elevation="1dp"
                    android:src="@drawable/map_icon"
                    style="@style/imageButtonStyle"/>

                <Button
                    android:id="@+id/acceptAllButton"
                    style="@style/primaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:elevation="1dp"
...
