<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="message"
            type="String" />
        <variable
            name="isVisible"
            type="boolean" />
        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:id="@+id/emptyLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="@{isVisible?View.VISIBLE:View.GONE}"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{title}"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{message}"
            tools:text="Description"/>
    </LinearLayout>
</layout>